# mubot

./: CMakeLists.txt  README.md  index.html  muBoT.c
Apps/: SysInfo.c  bash.c  socket5.c  socket5.h
Autostart/: cron.c
BruteForce/: Pass.c  SSH.c
DoS/: SSYN2.c  UDP.c  tcp.c  webDoS.c
Misc/: ASCIIlogo.c
Scanner/: AutoScan.c  RNDScanner.c  SUBNETScanner.c
